Bump rapidoid to 25