@@ -1,13 +1,21 @@
-FROM maven:3.6.1-jdk-11-slim as maven
+FROM maven:3-eclipse-temurin-25-alpine as maven
 WORKDIR /rapidoid
 COPY pom.xml pom.xml
 COPY src src
 RUN mvn compile assembly:single -q
 
-FROM openjdk:11.0.3-jdk-slim
+FROM amazoncorretto:25
 WORKDIR /rapidoid
 COPY --from=maven /rapidoid/target/rapidoid-1.0-jar-with-dependencies.jar app.jar
 
 EXPOSE 8080
 
-CMD ["java", "-server", "-Xms2g", "-Xmx2g", "-XX:+UseParallelGC", "-XX:+AggressiveOpts", "-cp", "app.jar", "highlevel.Main", "profiles=postgres,production"]
+CMD ["java", \
+     "-server", \
+     "-XX:+UseParallelGC", \
+     "-XX:MaxRAMPercentage=70", \
+     "--add-opens", "java.base/java.lang=ALL-UNNAMED", \
+     "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED", \
+     "-cp", "app.jar", \
+     "highlevel.Main", \
+     "profiles=postgres,production"]
